--- a/index.html
+++ b/index.html
@@ -6,21 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unofficial ODSC Boston 2025 Agenda</title>
     <script defer data-domain="odsc.boston" src="https://plausible.io/js/script.js"></script>
-    <!-- Preload dark mode script to avoid flash -->
+    <!-- Preload dark mode script to avoid FOUC (Flash of Unstyled Content) -->
     <script>
-      // Immediately check and apply theme on page load to prevent flash
-      // This runs before React loads
+      // On page load or when changing themes (based on Tailwind v4 docs)
+      // This runs before React loads to avoid flash
       (function() {
-        const THEME_KEY = 'theme';
-        const storedTheme = localStorage.getItem(THEME_KEY);
-        const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-        
-        // Use stored preference if it exists, otherwise use system preference
-        if (storedTheme === 'dark' || (!storedTheme && prefersDark)) {
-          document.documentElement.classList.add('dark');
-        } else {
-          document.documentElement.classList.remove('dark');
-        }
+        document.documentElement.classList.toggle(
+          "dark",
+          localStorage.theme === "dark" || 
+            (!("theme" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)
+        );
       })();
     </script>
   </head>
